--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -346,11 +346,11 @@ user.params.list[['ICC.3']] <- rep(0.7, M)
 $\text{ICC}_3$ = `r user.params.list[['ICC.3']]`
 
 ```{r 3f.ICC30.7}
-# design <- "blocked_c2_3f"
-# user.params.list[['R2.3']] <- rep(0, M)
+design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 # user.params.list[['ICC.3']] <- rep(0, M)
-# blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-# print(blocked_c2_3f_ICC3.0.7_power_plot)
+blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_ICC3.0.7_power_plot)
 ```
 
 ```{r 3r.ICC30.7}
@@ -389,32 +389,32 @@ blocked_i1_3r_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_ba
 print(blocked_i1_3r_omega3.0.8_power_plot)
 ```
 
-<!-- ```{r omega30.8ICC30.7} -->
-<!-- user.params.list[['omega.3']] <- 0.8 -->
-<!-- user.params.list[['ICC.3']] <- rep(0.7, M) -->
-<!-- user.params.list[['K']] <- 20 -->
-<!-- ``` -->
+```{r omega30.8ICC30.7}
+user.params.list[['omega.3']] <- 0.8
+user.params.list[['ICC.3']] <- rep(0.7, M)
+user.params.list[['K']] <- 20
+```
 
-<!-- $\omega_3$ = `r user.params.list[['omega.3']]` -->
-<!-- $\text{ICC}_3$ = `r user.params.list[['ICC.3']]` -->
+$\omega_3$ = `r user.params.list[['omega.3']]`
+$\text{ICC}_3$ = `r user.params.list[['ICC.3']]`
 
-<!-- ```{r 3f.omega30.8ICC30.7} -->
-<!-- design <- "blocked_c2_3f" -->
-<!-- user.params.list[['R2.3']] <- rep(0, M) -->
-<!-- user.params.list[['ICC.3']] <- rep(0, M) -->
-<!-- blocked_i1_3f_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design) -->
-<!-- print(blocked_i1_3f_omega3.0.8ICC30.7_power_plot) -->
-<!-- ``` -->
+```{r 3f.omega30.8ICC30.7}
+design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
+blocked_i1_3f_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_3f_omega3.0.8ICC30.7_power_plot)
+```
 
-<!-- ```{r 3r.omega30.8ICC30.7} -->
-<!-- design <- "blocked_c2_3r" -->
-<!-- user.params.list[['R2.3']] <- params.default[['R2.3']] -->
-<!-- user.params.list[['ICC.3']] <- params.default[['ICC.3']] -->
-<!-- blocked_i1_3r_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design) -->
-<!-- print(blocked_i1_3r_omega3.0.8ICC30.7_power_plot) -->
-<!-- ``` -->
+```{r 3r.omega30.8ICC30.7}
+design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
+blocked_i1_3r_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_3r_omega3.0.8ICC30.7_power_plot)
+```
 
-<!-- ```{r omega3.ICC3.reset} -->
-<!-- user.params.list[['omega.3']] <- params.default[['omega.3']] -->
-<!-- user.params.list[['ICC.3']] <- params.default[['ICC.3']] -->
-<!-- ``` -->
+```{r omega3.ICC3.reset}
+user.params.list[['omega.3']] <- params.default[['omega.3']]
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
+```
