--- a/Validation/validate_wy.Rmd
+++ b/Validation/validate_wy.Rmd
@@ -204,12 +204,12 @@ user.params.list <- params.default
 user.params.list[['omega.2']] <- 0
 
 # for a reasonable runtime and power
-user.params.list[['J']] <- 10
-user.params.list[['K']] <- 5
-user.params.list[['nbar']] <- 20
-user.params.list[['ATE_ES']] <- rep(0.25, M)
-user.params.list[['ICC.3']] <- rep(0.1, M)
-user.params.list[['ICC.2']] <- rep(0.1, M)
+# user.params.list[['J']] <- 10
+# user.params.list[['K']] <- 5
+# user.params.list[['nbar']] <- 20
+# user.params.list[['ATE_ES']] <- rep(0.25, M)
+# user.params.list[['ICC.3']] <- rep(0.1, M)
+# user.params.list[['ICC.2']] <- rep(0.1, M)
 ```
 
 Blocked cluster, fixed effects
