--- a/Validation/validate_cluster_c2_2r.Rmd
+++ b/Validation/validate_cluster_c2_2r.Rmd
@@ -55,6 +55,9 @@ user.params.list[['omega.2']] <- 0
 user.params.list[['ICC.2']] <- rep(0.1, M)
 user.params.list[['J']] <- 60
 
+# what we assume for validation
+user.params.list[['S']] <- 1000
+
 params.default <- user.params.list
 ```
 
