--- a/Validation/validate_blocked_i1_2cfr.Rmd
+++ b/Validation/validate_blocked_i1_2cfr.Rmd
@@ -47,6 +47,10 @@ user.params.list[['K']] <- 1
 user.params.list[['ICC.3']] <- NULL
 user.params.list[['omega.3']] <- NULL
 user.params.list[['R2.3']] <- NULL
+
+# what we assume for validation
+user.params.list[['S']] <- 1000
+
 params.default <- user.params.list
 ```
 
